--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-APP_NAME=SITE.REMTECHSERVICE
+APP_NAME=
 APP_ENV=local
-APP_KEY=base64:dxyHygu/OIsPR4ofxTEmx7G8pr5xzxOXPGA4eF/oxO0=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -31,10 +31,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.yandex.ru
 MAIL_PORT=587
-MAIL_USERNAME=remt3chservis@yandex.ru
-MAIL_PASSWORD=rzfcynxjlydlutrc
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=remt3chservis@yandex.ru
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
